--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <div class="player">
             <i><img class="icon-player icon-seta" src="assets/img/backward-step-solid.svg" alt=""></i>
             <i><img class="icon-player icon-play" src="assets/img/circle-play-solid.svg" alt=""></i>
-            <!-- <i><img class="icon-player icon-pause" src="assets/img/circle-pause-solid.svg" alt=""></i> -->
+            <i><img class="icon-player icon-pause" src="assets/img/circle-pause-solid.svg" alt=""></i>
             <i><img class="icon-player icon-seta" src="assets/img/forward-step-solid.svg" alt=""></i>
         </div>
         <audio src="assets/music/modern-art-monument-music-main-version-01-48-12554.mp3"></audio>
