--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
     <main>
         <img class="img-main" src="assets/img/unsplash.jpg" alt="">
         <div class="descricao">
-            <h2>nome da musica</h2>
-            <i>Artista</i>
+            <h2 class="nomeMusica">nome da musica</h2>
+            <i class="nomeArtista">Artista</i>
         </div>
         <div class="duracao">
             <div class="barra">
@@ -26,14 +26,12 @@
             </div>
         </div>
         <div class="player">
-            <i><img class="icon-player icon-seta" src="assets/img/backward-step-solid.svg" alt=""></i>
+            <i><img class="icon-player icon-seta anterior" src="assets/img/backward-step-solid.svg" alt=""></i>
             <i><img class="icon-player icon-play" src="assets/img/circle-play-solid.svg" alt=""></i>
             <i><img class="icon-player icon-pause" src="assets/img/circle-pause-solid.svg" alt=""></i>
-            <i><img class="icon-player icon-seta" src="assets/img/forward-step-solid.svg" alt=""></i>
+            <i><img class="icon-player icon-seta proximo" src="assets/img/forward-step-solid.svg" alt=""></i>
         </div>
-        <audio src="assets/music/modern-art-monument-music-main-version-01-48-12554.mp3"></audio>
-        <audio src="assets/music/spatial-fugu-vibes-main-version-01-13-3432.mp3"></audio>
-        <audio src="assets/music/tropicana-soundroll-main-version-02-15-1725.mp3"></audio>
+        <audio src="assets/music/music-1.mp3"></audio>
     </main>
     <script src="main.js"></script>
 </body>
